# fastapi-user

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: router.py
app/common/responses/: success.py
app/core/: config.py  deps.py  logging.py
app/core/errors/: codes.py  defs.py  exception.py  handlers.py  problem.py  raise_.py  status_map.py
app/core/security/: deps.py  jwt.py  password.py  sliding_session.py
app/db/: __init__.py  base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 3afb10c54dd9_create_devices.py  b861e7b20ad1_create_users.py
app/infra/: redis.py
app/modules/auth/: cookies.py  router.py  schemas.py  service.py
app/modules/users/: errors.py  models.py  repository.py  schemas.py  service.py
tests/: conftest.py
tests/http/: auth_login_logut.http  auth_refresh.http  auth_signup.http
tests/unit/: test_users_signup.py
